colors and fonts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,20 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+#assets folder 
+  assets:
+    - assets/img/
+    - assets/fonts/
+  fonts:
+    - family: SF Pro Text
+      fonts:
+        - asset: assets/fonts/SF-Pro-Text-Black.otf
+        - asset: assets/fonts/SF-Pro-Text-Bold.otf
+        - asset: assets/fonts/SF-Pro-Text-Heavy.otf
+        - asset: assets/fonts/SF-Pro-Text-Light.otf
+        - asset: assets/fonts/SF-Pro-Text-Medium.otf
+        - asset: assets/fonts/SF-Pro-Text-Regular.otf
+        - asset: assets/fonts/SF-Pro-Text-Semibold.otf
+        - asset: assets/fonts/SF-Pro-Text-Thin.otf
+        - asset: assets/fonts/SF-Pro-Text-ThinItalic.otf
+        - asset: assets/fonts/SF-Pro-Text-Ultralight.otf
