--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.15.8
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
   flutter:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
