--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,14 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
-  cloud_firestore: ^4.15.8
-  firebase_auth: ^4.17.8
-  firebase_core: ^2.27.0
   flutter:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.1
+  firebase_core: ^2.4.0
+  firebase_database: ^10.4.9
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
