--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,14 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.17.4
   firebase_auth: ^4.19.6
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
   shared_preferences: ^2.2.3
