--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
-  
+  epub_viewer: ^4.0.0
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
   shared_preferences: ^2.2.3
